--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>¿Que quiere el pueblo?</h1>
         <audio src="assets/media/audio.mp3" id="audio"></audio>
         <button id="btn" class="btn btn-outline-primary align-self-center py-2 my-3">Tocame papi</button>
-        <video id="video" class="d-none" src="assets/media/video-loop.mp4" loop autoplay muted></video>
+        <video id="video" class="d-none img-fluid" src="assets/media/video-loop.mp4" loop autoplay muted></video>
     </div>
 
     <script src="assets/scripts/main.js"></script>
