--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project</title>
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div class="d-flex flex-column text-center">
+    <div class="container">
         <h1>¿Que quiere el pueblo?</h1>
         <audio src="assets/media/audio.mp3" id="audio"></audio>
-        <button id="btn" class="btn btn-outline-primary align-self-center py-2 my-3">Tocame papi</button>
-        <video id="video" class="d-none img-fluid" src="assets/media/video-loop.mp4" loop autoplay muted></video>
+        <button id="btn">Tocame papi</button>
+        <video id="video" src="assets/media/video-loop.mp4" loop autoplay muted></video>
     </div>
 
     <script src="assets/scripts/main.js"></script>
