--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <video id="video" src="assets/media/video-loop.mp4" loop autoplay muted></video>
     </div>
 
-    <script src="assets/scripts/main.js"></script>
+    <script src="./assets/scripts/main.js"></script>
 </body>
 </html>
