mano, github me volvió un 8 un proyecto de 10 minutos

--- a/index.html
+++ b/index.html
@@ -4,26 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project</title>
-<<<<<<< HEAD
     <link rel="stylesheet" href="style.css">
-=======
-    <link rel="stylesheet" href="./assets/css/style.css">
->>>>>>> d04f5e1debcc4f177d3da880a47ac47be642daef
 </head>
 <body>
     <div class="container">
         <h1>¿Que quiere el pueblo?</h1>
-<<<<<<< HEAD
         <audio src="media/audio.mp3" id="audio"></audio>
-        <button id="btn" class="btn btn-outline-primary align-self-center py-2 my-3">Tocame papi</button>
-        <video id="video" class="d-none img-fluid" src="media/video-loop.mp4" loop autoplay muted></video>
-=======
-        <audio src="assets/media/audio.mp3" id="audio"></audio>
         <button id="btn">Tocame papi</button>
-        <video id="video" src="assets/media/video-loop.mp4" loop autoplay muted></video>
->>>>>>> d04f5e1debcc4f177d3da880a47ac47be642daef
+        <video id="video" src="media/video-loop.mp4" loop autoplay muted></video>
     </div>
 
-    <script src="./assets/scripts/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
